--- a/library_app/templates/create_quiz.html
+++ b/library_app/templates/create_quiz.html
@@ -167,7 +167,10 @@
                                 </div>
                         </div>
                         <input type="hidden" value="multiple_answers" name = 'type_question'>
-                        <button name="button" class = 'button-save' type="submit">Створити та зберегти</button>
+                        <div class="button-div">
+                            <button name="button" class = 'button-save' type="submit">Створити та зберегти</button>
+                        </div>
+                       
                     </form>
                 {% endif %}
             {% endif %}
