added generator codes. Added passing quizzes with code & after all questions you can see your results in nums & percents.

--- a/execution_app/templates/enter_code.html
+++ b/execution_app/templates/enter_code.html
@@ -13,12 +13,11 @@
     
     <main>
 
-        <form action="/execution/<enter_code>" method="post" class = 'form_enter'>
+        <form method="post" class = 'form_enter'>
             <p>GPTQuiz</p>
             <div class = 'input_code'>
-                <input type="text" name="input-nickname" placeholder="Введіть код">
+                <input type="text" name="input-code" placeholder="Введіть код">
                 <button class="button_code" type="submit">ПРИЄДНАТИСЬ</button> 
-
             </div> 
 
 
