--- a/admin_app/static/css/admin.css
+++ b/admin_app/static/css/admin.css
@@ -70,8 +70,9 @@
     justify-content: center;
     align-items: start;
     flex-wrap: wrap;
+    /* max-width: 80vw; */
     gap: 25px;
-    width: 1400px;
+    max-width: 1200px;
 }
 .quiz {
     display: flex;
