--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -13,7 +13,7 @@
     
     <main>
 
-        <form action="/execution/<enter_code>" method="post" class = 'form_enter'>
+        <form method="post" class = 'form_enter'>
             <p>GPTQuiz</p>
             <div class = 'input_code'>
                 <input type="text" name="input-nickname" placeholder="Введіть нікнейм">
