--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -58,6 +58,8 @@ h1{
     font-size: 26px;
 }
 aside button{
+    position: relative;
+    overflow: hidden;
     width: 100%;
     height: 50px;
     background-color: #28f200;
@@ -66,21 +68,51 @@ aside button{
     color: white;  
     font-family: "inter";
     font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+aside button:hover {
+    background-color: #27ea00;
 }
 .links{
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 25px;
 }
-.links a{
+.tab-link{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    gap: 10px;
     color: white;
-    font-family: "inter";
+    font-family: "Inter";
     font-size: 20px;
+    width: 100%;
+    gap: 10px;
     text-decoration: none;
+    -webkit-user-drag: none;
+    position: relative;
+}
+.tab-link div{
+    display: flex;
+    justify-content: left;
+    width: 100%;
+    align-items: center;
+    gap: 5px;
+}
+.divider{
+    width: 70%;
+    height: 3px;
+    padding: 0 !important;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+
+.tab-link:hover .divider{
+    opacity: 1;
+    width: 100%;
 }
 
 .nav{
@@ -128,4 +160,19 @@ aside button{
 textarea:focus, input:focus{
   transition: all 0.2s ease-in-out;
   outline:solid #B26FFF 1px ;
+}
+@keyframes ripple-animation {
+    to {
+      transform: scale(5);
+      opacity: 0;
+    }
+}
+
+.ripple-effect {
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple-animation 1s linear;
+    background-color: rgba(0, 0, 0, 0.119);
+    pointer-events: none;
 }
