Added styles in passing quiz with question type of 'enter answer'

--- a/library_app/static/css/library.css
+++ b/library_app/static/css/library.css
@@ -104,3 +104,7 @@ textarea:focus, input:focus{
   transition: all 0.2s ease-in-out;
   outline:solid #B26FFF 1px ;
 }
+
+#createQuiz a {
+    padding: 20px 0;
+}
