--- a/project/templates/base_admin.html
+++ b/project/templates/base_admin.html
@@ -13,7 +13,7 @@
                 GPTQuiz
             </a>
             
-            <button>
+            <button class="create-btn-ripple">
                 + Створити
             </button>
             <div class="links">
