--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -1,8 +1,23 @@
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Medium.ttf) format('truetype');
+    font-weight: 500;
+}
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Bold.ttf) format('truetype');
+    font-weight: 600;
+}
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Regular.ttf) format('truetype');
+    font-weight: 300;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: Inter;
 }
 
 body{
@@ -92,6 +107,7 @@ main {
     font-weight: bold;
     background-color: #22CE00;
     color: #262626;
+    border: none;
     border-radius: 32px;
 
 }
