--- a/execution_app/static/css/passing.css
+++ b/execution_app/static/css/passing.css
@@ -1,26 +1,50 @@
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Medium.ttf) format('truetype');
+    font-weight: 500;
+}
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Bold.ttf) format('truetype');
+    font-weight: 600;
+}
+@font-face {
+    font-family: Inter;
+    src: url(../fonts/Inter_28pt-Regular.ttf) format('truetype');
+    font-weight: 300;
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: white;
+    font-family: Inter;
 }
 
+textarea:focus, input:focus{
+  transition: all 0.2s ease-in-out;
+  outline:solid #B26FFF 1px ;
+}
 body {    
     background-color: #1A1A1A;
 }
 
 main {
     position: fixed;
-    top: 18%;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     width: 80vw;
-    padding: 0 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 67px;
+    gap: 12px;
+}
+
+.enter-answer{
+    background-color: #383838;
+    border-radius: 15px;
 }
 
 
@@ -30,7 +54,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 47px;
+    gap: 30px;
     padding: 16px;
     border-radius: 15px;
     background-color: #383838;
@@ -60,22 +84,25 @@ main {
     color: white;
     opacity: 76%;
     font-family: 'Inter';
+    text-decoration: none;
+}
+
+.answers-block span{
     font-weight: 400;
     font-size: 24px;
-    text-decoration: none;
-
-
 }
-.answers-block label{
+
+.answer{
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
-   
+    border: none;
     justify-content: center;
     align-items: center;
     text-align: center;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 
@@ -108,14 +135,43 @@ form{
     display: flex;
 }
 
-button{
-    position: absolute;
-    bottom: 0;
-}
 
 .choose{
     position: absolute;
-    left: 10px;
+    right: 10px;
     top: 10px;
 }
 
+.submit1{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -60px;
+    padding: 10px 20px;
+    font-size: 20px;
+    background-color: #22CE00;
+    border: 2px solid gray;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
+.answer-block{
+    background-color:#252525;
+    width: calc(100% - 40px);
+    height: calc(100% - 30px);
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.answer-block input{
+    width: calc(100% - 300px);
+    height: calc(100% - 130px);
+    background-color: #1D1D1D;
+    border: 1px solid #1D1D1D;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 24px;
+}
