--- a/execution_app/templates/passing.html
+++ b/execution_app/templates/passing.html
@@ -8,7 +8,11 @@
 
     </head>
     <body>
-        <main>
+        {% if question.type != "enter answer" %}
+            <main>
+        {% else %}
+            <main class="enter-answer">
+        {% endif %}
             <div class="question-div">
                 <p>{{ question.name }}</p>
             </div>
@@ -16,44 +20,47 @@
             <form method="post"> 
                 {% if question.type == "one answer" %}
                     <div class="answers-block">
-                        <label for="1" class="answer1">
+                        <button for="1" class="answer1 answer" name="button" value="choose;4">
                             <span>{{ question.variant_1 }}</span>
-                            <input type="radio" class="choose" name="answer" value="1" id="1">
-                        </label>
-                        <label for="2" class="answer2">
+                        </button>
+                        <button for="2" class="answer2 answer" name="button" value="choose;4">
                             <span >{{ question.variant_2 }}</span>
-                            <input type="radio"  class="choose" name="answer" value="2" id="2">
-                        </label>
-                        <label for="3" class="answer3">
+                        </button>
+                        <button for="3" class="answer3 answer" name="button" value="choose;4">
                             <span >{{ question.variant_3 }}</span>
-                            <input type="radio" class="choose" name="answer" value="3" id="3">
-                        </label>
-                        <label for="4" class="answer4">
+                        </button>
+                        <button for="4" class="answer4 answer" name="button" value="choose;4">
                             <span>{{ question.variant_4 }}</span>
-                            <input type="radio" class="choose" name="answer" value="4" id="4">
-                        </label>
+                        </button>
                     </div>
                 {% elif question.type == "multiple answers" %}
-                    <div style="margin-left: 200px;">
-                        <span>{{ question.variant_1 }}</span>
-                        <input type="checkbox" name="answer" value="1" id="">
+                    <div class="answers-block">
+                        <label for="1" class="answer1 answer">
+                            <span>{{ question.variant_1 }}</span>
+                            <input type="checkbox" class="choose" name="answer" value="1" id="1">
+                        </label>
+                        <label for="2" class="answer2 answer">
+                            <span >{{ question.variant_2 }}</span>
+                            <input type="checkbox" class="choose" name="answer" value="2" id="2">
+                        </label>
+                        <label for="3" class="answer3 answer">
+                            <span >{{ question.variant_3 }}</span>
+                            <input type="checkbox" class="choose" name="answer" value="3" id="3">
+                        </label>
+                        <label for="4" class="answer4 answer">
+                            <span>{{ question.variant_4 }}</span>
+                            <input type="checkbox" class="choose" name="answer" value="4" id="4">
+                        </label>
                     </div>
-                    <div>
-                        <span>{{ question.variant_2 }}</span>
-                        <input type="checkbox" name="answer" value="2" id="">
-                    </div>
-                    <div>
-                        <span>{{ question.variant_3 }}</span>
-                        <input type="checkbox" name="answer" value="3" id="">
-                    </div>
-                    <div>
-                        <span>{{ question.variant_4 }}</span>
-                        <input type="checkbox" name="answer" value="4" id="">
-                    </div>
+                    <button class="submit1" type="submit">Відповісти</button>
                 {% elif question.type == "enter answer" %}
-                    <div style="margin-left: 200px;"><input type="text" name="answer" placeholder="..."></div>
+                    <div class="answers-block">
+                        <div class="answer-block">
+                            <input type="text" name="answer" placeholder="...">
+                        </div>
+                    </div>
+                    <button class="submit1" type="submit">Відповісти</button>
                 {% endif %}
-                <button type="submit">Відповісти</button>
             </form>
         </main>
    
