--- a/library_app/templates/library.html
+++ b/library_app/templates/library.html
@@ -11,7 +11,7 @@ Library
 {% block content %}
     <div class = "created-by-me-create">
         <h2>Створено мною</h2>
-        <button id = 'createQuiz'>
+        <button id = 'createQuiz' class="create-btn-ripple">
             <input type="hidden" id="quizCreate" value="{{ create_quiz_id }}">
             <a href="/create-quiz/">
                 + Створити
