--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -58,8 +58,6 @@ h1{
     font-size: 26px;
 }
 aside button{
-    position: relative;
-    overflow: hidden;
     width: 100%;
     height: 50px;
     background-color: #28f200;
@@ -107,7 +105,7 @@ aside button:hover {
     background-color: whitesmoke;
     border-radius: 10px;
     opacity: 0;
-    transition: opacity 0.2s ease;
+    transition: all 0.2s ease;
 }
 
 .tab-link:hover .divider{
@@ -121,7 +119,6 @@ aside button:hover {
     position: absolute;
     right: 0;
     background-color: #333333;
-    /* z-index: 3; */
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -168,7 +165,12 @@ textarea:focus, input:focus{
     }
 }
 
-.ripple-effect {
+.create-btn-ripple{
+    position: relative;
+    overflow: hidden;
+}
+
+.ripple-effect{
     position: absolute;
     border-radius: 50%;
     transform: scale(0);
