--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -21,7 +21,7 @@
 }
 body{
     background-color: #303030;
-    padding-left: 220px;
+    /* padding-left: 220px; */
 }
 aside{
     position: fixed;
