--- a/admin_app/static/css/admin.css
+++ b/admin_app/static/css/admin.css
@@ -106,3 +106,8 @@
     text-align: center;
     opacity: 0.8;
 }
+.quiz hr {
+    width: 90%;
+    background-color: #ffffffb7;
+    color: #ffffffb7;
+}
