очищено базовий блок content в history.html

--- a/history_app/templates/history.html
+++ b/history_app/templates/history.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="header">
+    <!-- <div class="header">
         <h2>Пройдено мною</h2>
     </div>
     <div class="quiz-list-container">
@@ -28,5 +28,5 @@
                 </button>
             </form>
         </div>
-    </div>
+    </div> -->
 {% endblock %}
