--- a/history_app/static/css/history.css
+++ b/history_app/static/css/history.css
@@ -1,116 +1,57 @@
-body {
-    overflow-x: hidden;
-}
-
-.nav {
-    position: sticky;
-}
-
-.header {
+header{
+    position: relative;
+    top: 45px;
+    left: 220px;
+    width: calc(100% - 220px);
+    height: 80px;
     display: flex;
     align-items: center;
-    width: calc(100% - 88px);
-    height: 78px;
-    padding: 0 44px;
+    padding-left: 130.5px;
+    background-color: #262626;
+}
+header h2{
+    font-family: 'Inter';
+    color: white;
+    font-weight: 300;
+    font-size: 24px;
 }
 
-.header h2 {
-    font-size: 32px;
-    font-family: "Inter";
-    font-weight: bold;
-    color:  white;
-}
-
-.quiz-icon-container {
-    background-image: url(../images/test.svg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #3F434C;
-    border-radius: 100px;
-    min-width: 140px;
-    height: 141px;
-}
-.passed-by-me{
-    width: 1270px;
-    height: 20px;
-    overflow: hidden;
+.passed-quizes{
+    position: relative;
+    top: 45px;
+    left: 220px;
+    width: calc(100% - 220px);
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px 50px;
+    gap: 10px;
 }
-
 .quiz{
-    display: flex;
-    align-items: center;
-    width: 92%;
-    height: 170px;
-    background-color: 262626;
-    border-radius: 30px;
-    padding-right: 30px;
-    overflow: hidden;
-    gap: 15px;
-}
-
-.quiz-list-container {
+    position: relative;
+    width: 325px;
+    height: 400px;
+    background-color: #373737;
+    border-radius: 10px;  
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-.quiz img{
-    height: 170px;
-    width: 250px;
-    user-select: none;
-    -webkit-user-select: none;
-    -webkit-user-drag: none;
-}
-.info{
-    width: 60%;
-    font-family: "Inter";
-    font-size: 20px;
+    padding: 10px;
+    gap: 10px; 
     color: white;
-    margin-left: 15px;
-    margin-top: 5px;
 }
-
-form button{   
-    background-color: 262626;
-    border: none;
-    margin-bottom: 10px;
+.quiz h3{
+    font-size: 24px;
+    font-weight: 400;
 }
-form img{
-    border-radius: 50%;
-    width: 10px;
-    height: 20px;
-    
+.quiz h4{
+    font-size: 20px;
+    font-weight: 300;
+    opacity: 0.8;
 }
-
-#view-btn {
-    font-weight: bold;
-    font-size: 15px;
-    color: #262626;
-    background-color: #22CE00;
-    border-radius: 100px;
-    height: 49px;
-    padding: 0 20px;
+#desc{
+    width: 100%;
+    height: 144px;
 }
-
-#delete-btn {
-    background-color: #464C66;
-    border-radius: 100px;
-    width: 52px;
-    height: 49px;
-    cursor: pointer;
-}
-
-#delete-btn img {
-    width: 20px;
-    height: 20px;
-}
-
-.row {
-    display: flex;
-    align-items: center;
-}
-
-.view-or-delete {
-    gap: 20px;
+.quiz p{
+    font-weight: 300;
 }
