--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -13,6 +13,7 @@
     <p class="welcome-text">Представляємо вам <span>Освітницький комплекс</span></p>
     <h1 class="quote">Зручно, Швидко, Актуально</h1>
     <div class="line"></div>
-    <h2 class="welcome-information">GPTQuiz - це платформа для <span>створення</span>, <span>проходження</span> <br> та <span>аналізу </span>вікторин</h2>
+    <h2 class="welcome-information"><span id="name">GPTQuiz</span> - твій зручний помічний у навчанні та роботі,<br> це платформа для <span>створення</span>, <span>проходження</span> <br> та <span>аналізу </span>вікторин</h2>
 </div>
+
 {% endblock %}
