--- a/admin_app/templates/admin.html
+++ b/admin_app/templates/admin.html
@@ -29,7 +29,7 @@
                     <!-- <img src="{{ url_for('admin_app.static', filename= 'images/' + quiz.name ) }}"> -->
                     <img src="{{ url_for('admin_app.static', filename= 'images/image.png') }}">
                     <h3>{{ quiz.name }}</h3>
-                    <p>{{ quiz.description }}</p>
+                    <p class="quiz-description">{{ quiz.description }}</p>
                     <hr>
                     <p>{{ quiz.count_questions }} запитань</p>
                     <p>Author: {{ quiz.user.login }}</p>
@@ -37,4 +37,5 @@
             {% endfor %}
         </div>
     </div>
+    <script src="{{ url_for('admin_app.static', filename= 'js/description.js') }}"></script>
 {% endblock %}
